jS-Strict-Mode/Examples/example9.js
// Octal numeric literals are not allowed
"use strict";
// let x = 010; // Removing comment from this statement will result in below mentioned Error.  
// SyntaxError: Octal literals are not allowed in strict mode.